<resources>
    <string name="app_name">Athene</string>
    <string name="search_title">Suche</string>
    <string name="edit_title">Bearbeiten</string>
    <string name="cab_delete">Einträge löschen</string>
    <string name="dialog_add_category_name">Name:</string>
    <string name="dialog_add_password_name">Name:</string>
    <string name="dialog_add_category_description">Beschreibung:</string>
    <string name="dialog_add_category_button_positive">Speichern</string>
    <string name="dialog_add_category_button_negative">Abbrechen</string>
    <string name="save_category_title">Speichern</string>
    <string name="cab_checked_string">ausgewählt</string>
    <string name="folder_image">Folder_Image</string>
    <string name="hint_name">Name</string>
    <string name="text_beschreibung">Beschreibung</string>
    <string name="hint_beschreibung">Beschreibung</string>
    <string name="textview">TextView</string>
    <string name="lock_image">Lock_Image</string>
    <string name="text_email">Email</string>
    <string name="hint_email">Email</string>
    <string name="text_benutzername">Benutzername</string>
    <string name="hint_benutzername">Benutzername</string>
    <string name="text_password">Password</string>
    <string name="hint_password">Password</string>
    <string name="plus_image">Plus_Image</string>
    <string name="copy_image">Copy_Image</string>
    <string name="eye_image">Eye_Image</string>
    <string name="date">dd.mm.yyyy</string>
    <string name="text_login">Login</string>
    <string name="text_password_length">Passwort Länge:</string>
    <string name="text_buchstaben">Buchstaben</string>
    <string name="text_zahlen">Zahlen</string>
    <string name="text_sonderzeichen">Sonderzeichen</string>
    <string name="fingerprinticon">FingerprintIcon</string>
    <string name="text_authentification">Fingerabdruck Authentifizierung</string>
    <string name="text_loginwithfingerprint">Platzieren Sie ihren Finger auf dem Sensor um sich einzuloggen!</string>
    <string name="text_loginwithpassword">Mit Passwort einloggen</string>
    <string name="text_masterpassword">Choose a master password</string>
    <string name="hint_confirm">Confirm Password</string>
    <string name="text_save">Save</string>
</resources>
