<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">

    <!-- dummy for no autoselect -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:id="@+id/layoutWithCircleDrawable"
        android:layout_gravity="center_vertical"
        android:background="@drawable/roundshape">

        <ImageView
            android:focusable="true"
            android:layout_width="match_parent"
            android:padding="6dp"
            android:layout_height="match_parent"
            android:id="@+id/imageView36"
            android:src="@drawable/ic_lock_outline_white_24dp"
            android:contentDescription="@string/lock_image" />
    </FrameLayout>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="text" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_email" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:nextFocusUp="@id/emailText"
        android:nextFocusLeft="@id/emailText"
        android:imeOptions="actionNext" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_benutzername" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_benutzername"
        android:inputType="textPersonName"
        android:imeOptions="actionNext" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_password" />

    <EditText
        android:id="@+id/passwordPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:imeOptions="actionNext" />

    <GridLayout
        android:columnCount="3"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/CreatePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            android:contentDescription="@string/plus_image" />

        <ImageButton
            android:id="@+id/CopyPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_content_copy_white_24dp"
            android:contentDescription="@string/copy_image" />

        <ImageButton
            android:id="@+id/ShowPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_visibility_white_24dp"
            android:contentDescription="@string/eye_image" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_beschreibung" />
    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_beschreibung"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:imeOptions="actionDone"
        android:maxLines="10" />


    <TextView
        android:id="@+id/addedPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/date" />



    <TextView
        android:id="@+id/editedPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date" />


</LinearLayout>
</ScrollView>