<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

    <!-- dummy for no autoselect -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:id="@+id/layoutWithCircleDrawable"
            android:layout_gravity="center_vertical"
            android:background="@drawable/roundshape">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:id="@+id/imageView36"
                android:src="@drawable/ic_folder_open_white_24dp"
                android:contentDescription="@string/folder_image" />
        </FrameLayout>

        <EditText
            android:id="@+id/nameCategoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext" />

    </LinearLayout>

    <TextView
        android:layout_below="@id/topPanel"
        android:layout_width="wrap_content"
        android:id="@+id/descriptionCategoryHeader"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_beschreibung" />


    <EditText
        android:id="@+id/descriptionCategoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/hint_beschreibung"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:layout_below="@id/topPanel" />

    <TextView
        android:id="@+id/addedCategoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/descriptionCategoryText"
        android:layout_marginTop="17dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/editedCategoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addedCategoryTextView"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/textview" />

</RelativeLayout>